content: write "Virtual threads"
Measured: ten thousand tasks each sleeping 50 ms finish in 135 ms on virtual
threads against 2545 ms on the 200-thread pool chapter 8.3's sizing advice
would have produced. The advice was right; virtual threads change its premise,
so blocking straight-line code comes back and CompletableFuture chains stop
being mandatory.

Pinning gets its own measurement: 128 tasks over 16 independent locks take
1617 ms when they block inside synchronized and 404 ms under ReentrantLock,
because a pinned virtual thread holds a carrier for the whole sleep and there
are only four carriers.

roadmap: 8.5 retitled from "Virtual threads and structured concurrency".
StructuredTaskScope is a preview API in Java 21 and will not compile without
--enable-preview, so nothing about it can be verified; the chapter shows its
shape in a clearly-marked non-runnable sketch and gives the working equivalent
— an ExecutorService in try-with-resources — alongside what that does not do.

Two problems: fan-out-blocking turns a serial 500-call loop into submit-then-
read with a timing assertion a serial answer cannot pass, including a
firstNonEmpty whose "first" is the lowest index rather than the first to
finish; avoid-pinning replaces a synchronized cache with a promise-in-the-map
that removes the entry on failure rather than memoising the exception, and a
hand-written wait/notify gate with a Semaphore.

288 samples and 104 problems verified.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01M4uB2tQNZahdnEKnB39mpx